--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Rebing0512\\Geohash\\ServiceProvider"
+                "Rebing0512\\Ocr\\ServiceProvider"
             ]
         }
     }
