--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
     "autoload": {
         "psr-4": {
             "Rebing0512\\Ocr\\": "src/"
-        }
+        },
+        "files": [
+            "app/Global/functions.php"
+        ]
     },
     "extra": {
         "laravel": {
